crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__type-2.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"class Foo; class Bar<F$\")"
---
[
    CompletionItem {
        label: "Bar",
        insert_text_snippet: Some(
            "Bar$0",
        ),
        detail: "class",
        documentation: None,
        kind: Class,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Record {
                data: DefinedRecord(
                    Class(
                        Id {
                            idx: 1,
                        },
                    ),
                ),
                name: "Bar",
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "Foo",
        insert_text_snippet: Some(
            "Foo$0",
        ),
        detail: "class",
        documentation: None,
        kind: Class,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Record {
                data: DefinedRecord(
                    Class(
                        Id {
                            idx: 0,
                        },
                    ),
                ),
                name: "Foo",
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "bit",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Type,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "bits",
        insert_text_snippet: Some(
            "bits<$1> $0",
        ),
        detail: "",
        documentation: None,
        kind: Type,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "code",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Type,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "dag",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Type,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "int",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Type,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "list",
        insert_text_snippet: Some(
            "list<$1> $0",
        ),
        detail: "",
        documentation: None,
        kind: Type,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
    CompletionItem {
        label: "string",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Type,
        sort_text: None,
        trigger_signature_help: false,
        item_type: None,
    },
]
