crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__value-2.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"def foo; defvar tmp = f$\")"
---
[
    CompletionItem {
        label: "false",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "foo",
        insert_text_snippet: None,
        detail: "def",
        documentation: None,
        kind: Def,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Record {
                data: DefinedRecord(
                    Def(
                        Id {
                            idx: 0,
                        },
                    ),
                ),
                name: "foo",
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "true",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
]
