crates/ide/src/handlers/snapshots/ide__handlers__completion__tests__value-3.snap
---
source: crates/ide/src/handlers/completion.rs
expression: "check(\"class Foo; defset list<Foo> foo = {} defvar tmp = f$\")"
---
[
    CompletionItem {
        label: "Foo",
        insert_text_snippet: Some(
            "Foo<>$0",
        ),
        detail: "class",
        documentation: None,
        kind: Class,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Record {
                data: DefinedRecord(
                    Class(
                        Id {
                            idx: 0,
                        },
                    ),
                ),
                name: "Foo",
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "false",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "foo",
        insert_text_snippet: None,
        detail: "list<Foo>",
        documentation: None,
        kind: Defset,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            List {
                elm: Record {
                    data: DefinedRecord(
                        Class(
                            Id {
                                idx: 0,
                            },
                        ),
                    ),
                    name: "Foo",
                    _priv: (),
                },
                _priv: (),
            },
        ),
    },
    CompletionItem {
        label: "true",
        insert_text_snippet: None,
        detail: "",
        documentation: None,
        kind: Keyword,
        sort_text: None,
        trigger_signature_help: false,
        item_type: Some(
            Bit {
                _priv: (),
            },
        ),
    },
]
